<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".pendaftaran">

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:editable="false"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ednama"
        android:layout_width="323dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/regNama"
        android:inputType="textPersonName"
        android:text="Masukkan Nama"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/edalamat"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="Masukkan Alamat"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ednama"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/edgender"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:hint="@string/regGender"
        android:text="Jenis Kelamin"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edalamat"
        app:layout_constraintVertical_bias="0.031" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:text="Laki-Laki"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edalamat"
        app:layout_constraintVertical_bias="0.028" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Perempuan"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edalamat"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/edAgama"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:text="@string/regAgama"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edgender"
        app:layout_constraintVertical_bias="0.148" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:text="Islam"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.057" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Kristen"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.055" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Hindu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        app:layout_constraintVertical_bias="0.059" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Katholik"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        app:layout_constraintVertical_bias="0.062" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Konghucu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        app:layout_constraintVertical_bias="0.059" />
    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:text="Buddha"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/white"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox8"
        app:layout_constraintVertical_bias="0.177" />

    <EditText
        android:id="@+id/edrepass"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/regrePassword"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPass"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/lbatal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbatal"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edrepass"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/ldaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lDaftar"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edrepass"
        app:layout_constraintVertical_bias="0.942" />

</androidx.constraintlayout.widget.ConstraintLayout>